--- a/styles/index.css
+++ b/styles/index.css
@@ -47,6 +47,10 @@ article {
   margin: 60px 0;
 }
 
+#skills article {
+  margin: 0 0 60px 0;
+}
+
 footer {
   background-color: var(--footer);
   grid-area: footer;
